Force Field Curve Shape not working #51012

Closed
opened 2017-03-20 18:47:02 +01:00 by Everton Schneider · 7 comments

System Information
Ubuntu 16.10 GeForce GTX 980 Ti/PCIe/SSE2

Blender Version
Broken: 2.78 hash:18bf900
Worked: Official 2.78c hash:e92f2352830

Short description of error
Using a curve with a force field set to "curve" in "shape" options are not working anymore.
It seems to use "point" instead of using the curve data...

Exact steps for others to reproduce the error
Add a plane with a simple particle system;
Add a curve;
Enable "Force Field" on the added curve;
Change the "Shape" of the force to "Curve";
Set the "Force" to -20 or -60 to attract the particles to curve;
Notice that particles accumulates in the center of the curve object, not as expected...ForceField_CurveShape.blend

**System Information** Ubuntu 16.10 GeForce GTX 980 Ti/PCIe/SSE2 **Blender Version** Broken: 2.78 hash:18bf900 Worked: Official 2.78c hash:e92f2352830 **Short description of error** Using a curve with a force field set to "curve" in "shape" options are not working anymore. It seems to use "point" instead of using the curve data... **Exact steps for others to reproduce the error** Add a plane with a simple particle system; Add a curve; Enable "Force Field" on the added curve; Change the "Shape" of the force to "Curve"; Set the "Force" to -20 or -60 to attract the particles to curve; Notice that particles accumulates in the center of the curve object, not as expected...[ForceField_CurveShape.blend](https://archive.blender.org/developer/F516753/ForceField_CurveShape.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

This issue was referenced by 13d8661503

This issue was referenced by 13d8661503f07a16da15f75d9fc9597e43d78283

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Are you sure this worked before?
I have tested here and it seems like, it always worked as a point. (What is strange considering the Curve option)`

Maybe you are confusing with the Curve Guide type. No?

Are you sure this worked before? I have tested here and it seems like, it always worked as a point. (What is strange considering the `Curve` option)` Maybe you are confusing with the `Curve Guide` type. No?

In #51012#424012, @mano-wii wrote:
Are you sure this worked before?
I have tested here and it seems like, it always worked as a point. (What is strange considering the Curve option)`

Maybe you are confusing with the Curve Guide type. No?

It's working with the official release, I tested before posting here. The Worked version is: Official 2.78c hash:e92f2352830
And I'm not confusing with curve guide, sorry if it's not clear... My point was surface deform with curve shape.
Thank you for the fix!!! Thank you so much!

> In #51012#424012, @mano-wii wrote: > Are you sure this worked before? > I have tested here and it seems like, it always worked as a point. (What is strange considering the `Curve` option)` > > Maybe you are confusing with the `Curve Guide` type. No? It's working with the official release, I tested before posting here. The Worked version is: Official 2.78c hash:e92f2352830 And I'm not confusing with curve guide, sorry if it's not clear... My point was surface deform with curve shape. Thank you for the fix!!! Thank you so much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51012
No description provided.