Fix T51012: Surface modifier was not working with curves

This prevented the Force Field Curve Shape of working